src/global/index.css
html {
  font-family: 'Inter', sans-serif;
  font-feature-settings: 'cv05';
}

@supports (font-variation-settings: normal) {
  html {
    font-family: 'Inter var', sans-serif;
  }
}

body {
  background-color: var(--accent-100) !important;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
}

p {
  margin: 0;
}

span .text-markup {
  margin-bottom: 0.5em;
}

span .text-markup:last-child {
  margin-bottom: 0;
}

.browser-not-supported {
  color: var(--red-main);
  font-weight: bold;
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  padding: 50px;
}

.pop-up {
  background-color: var(--white);
  border-radius: var(--radius-xxl);
}

@keyframes fade-out-top {
  from {
    opacity: 1;
    transform: translateY(0);
  }

  to {
    opacity: 0;
    transform: translateY(-100%);
  }
}

@keyframes fade-in-top {
  from {
    opacity: 0;
    transform: translateY(-100%);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes fade-out-bottom {
  from {
    opacity: 1;
    transform: translateY(0);
  }

  to {
    opacity: 0;
    transform: translateY(100%);
  }
}

@keyframes fade-in-bottom {
  from {
    opacity: 0;
    transform: translateY(100%);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

@keyframes fade-in {
  0% {
    opacity: 0;
    visibility: visible;
    display: block;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fade-out {
  0% {
    opacity: 1;
    visibility: visible;
  }

  100% {
    opacity: 0;
    visibility: hidden;
    display: none;
  }
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

/* width */
::-webkit-scrollbar {
  width: 6px;
}

/* Track */
::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: var(--grey-300);
  border-radius: 10px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: var(--grey-350);
}

/* Text selection color for Mozilla Firefox */
::-moz-selection {
  color: var(--black);
  background: var(--accent-200);
}

/* Text selection color for another browsers */
::selection {
  color: var(--black);
  background: var(--accent-200);
}

body iframe {
  opacity: 0;
}

